fix backgrounds on iOS

--- a/src/HOC/OuterJumbotron/OuterJumbotron.stylesheet.scss
+++ b/src/HOC/OuterJumbotron/OuterJumbotron.stylesheet.scss
@@ -24,6 +24,9 @@
   right: 0;
   width: 100%;
   z-index: 1;
+  @media only screen and (max-width: 650px) {
+    background-attachment: scroll !important;
+  }
 }
 
 .enter {
