--- a/src/components/Contact/Contact.stylesheet.scss
+++ b/src/components/Contact/Contact.stylesheet.scss
@@ -4,6 +4,7 @@
   padding: 10vh 8vw 0 8vw;
   @media only screen and (max-width: 650px) {
     font-size: .85rem;
+    background-attachment: scroll !important;
   }
 }
 
