--- a/src/components/Description/Description.stylesheet.css
+++ b/src/components/Description/Description.stylesheet.css
@@ -15,6 +15,9 @@
   left: 0;
   right: 0;
   z-index: -1; }
+  @media only screen and (max-width: 650px) {
+    .background {
+      background-attachment: scroll !important; } }
 
 .contentWrapper {
   width: 60vw; }
