--- a/src/components/ServiceDetails/ServiceDetails.stylesheet.scss
+++ b/src/components/ServiceDetails/ServiceDetails.stylesheet.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   @media screen and (max-width: 650px) {
     display: block;
+    background-attachment: scroll !important;
   }
 }
 
